assets/css/style.css
:root {

  --section-columns: repeat(12, 1fr);

  --logo-height: 60px;

  --text-margin-bottom: calc(2 * var(--general-padding));

  --hero-height: 375px;
  --hero-font-size: 5.6em;

  --general-padding: 32px;
  --header-vertical-padding: var(--general-padding);
  
  --ios-bottom-furniture-padding: 140px; /*This is tuned for iPhone X only!*/

  --next-section-peek: 175px;

  --body-margin: 11vw;

  --info-section-height: 60vh;
  --person-height: 40vh;

  --menu-button-size: 55px;
  --header-height: var(--menu-button-size);
  --nav-height: auto;
  --footer-height: auto;
  --button-height: 30px;

  --base-font-size: 22px;

  --standard-shadow: 5px 5px 5px 5px rgba(0,0,0,0.3);

  --dark-colour: rgba(36,50,70,1);
  --light-colour: white;
  --knockout-background-colour: #656565;
  --dark-gray: rgb(150,150,150);
  --mid-gray: rgb(230,230,230);
  --header-background-colour: rgba(16,14,40,0.2);
  --multiply-colour: rgb(150,150,150);

  --navigation-background-colour: rgba(246,246,255, 0.95);

  --button-colour: var(--dark-colour);
  --button-text-colour: var(--light-colour);
  --alternate-tabular-highlight: rgba(16, 14, 40,0.03);
  --button-push-colour: rgb(200,200,200);
  --theme-colour: rgba(74,127,197,1);
  
  --highlight-colour: rgb(78,167,203);

  --menu-transition-time: 0.2s;

  --beta-banner-colour: rgba(244,66,92,0.5);

  --heading-font: 'Franchise';
  --body-font: 'Klinic Slab';
}

@media only screen and (max-width: 968px) {
  :root {
    --body-margin: var(--general-padding);
    --logo-height: 15vw;
    --hero-height: 55vh;
    --hero-font-size: 4em;
    --general-padding: 15px;
  }
}

@media only screen and (max-width: 422px) {
  :root {
    --logo-height: 10vw;
  }
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: normal;
  font-weight: normal;
  src: url(../fonts/KlinicSlabMedium.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: italic;
  font-weight: normal;
  src: url(../fonts/KlinicSlabMediumIt.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: normal;
  font-weight: bold;
  src: url(../fonts/KlinicSlabBold.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: italic;
  font-weight: bold;
  src: url(../fonts/KlinicSlabBoldIt.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: normal;
  font-weight: 300;
  src: url(../fonts/KlinicSlabBook.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: italic;
  font-weight: 300;
  src: url(../fonts/KlinicSlabBookIt.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: normal;
  font-weight: 200;
  src: url(../fonts/KlinicSlabLight.otf);
}

@font-face {
  font-family: 'Klinic Slab';
  font-style: italic;
  font-weight: 200;
  src: url(../fonts/KlinicSlabLightIt.otf);
}

@font-face {
  font-family: 'Franchise';
  src: url(../fonts/Franchise-Bold-hinted.ttf);

}

body:after{
  content: "Work in Progress";
  position: fixed;
  z-index: 3;
  width: 180;
  height: 25px;
  background: var(--beta-banner-colour);
  top: 40px;
  left: -45px;
  text-align: center;
  font-size: 13px;
  font-family: Kl;
  text-transform: uppercase;
  font-weight: bold;
  color: var(--light-colour);
  line-height: 27px;
  -ms-transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  padding-left: 30px;
  padding-right: 30px;
}

#viewsizedebug {
  position: fixed;
  right:0px;
  bottom:0;
  background-color: red;
  color: white;
}

body {
  margin:0;
  width: 100vw;
  min-width: 320px;
  font-family: var(--body-font);
  font-size: var(--base-font-size);
  font-weight: 300;
  line-height: 1.5;
  color: var(--dark-colour);
  display: grid;
  background-color: var(--light-colour);
  grid-template-rows: auto var(--footer-height);
  text-align: left;
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--heading-font);
  text-transform: uppercase;
  font-weight: 200;
}

h1 {
  font-size: 4em;
  margin-top: 0.2em;
  margin-bottom: 0.2em;
  line-height: 1.5em;
}

@media only screen and (max-width:968px) {
  h1 {
    line-height: 0.9;
  }
}

a {
  color: var(--highlight-colour);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

[responsive-background-image] picture, [responsive-background-image] img {
  display: none;
}

/* NAVIGATION */

nav {
  position: absolute;
  top: 0px;
  left: 0;
  width: calc(100vw - calc(var(--body-margin) * 2));
  height: var(--nav-height);

  background-color: var(--navigation-background-colour);

  display: grid;
  visibility: hidden;

  padding-top: var(--header-vertical-padding);
  padding-bottom: var(--header-vertical-padding);

  grid-template-columns: auto var(--menu-button-size);
  grid-template-rows: auto auto;
  grid-template-areas:
    "logo menu-button"
    "menu-content menu-content";
  column-gap: 15px;
  grid-row-gap: 15px;
  align-items: center;
  /* overflow: hidden; */

  z-index: 2;

  box-shadow: var(--standard-shadow);

  transition: opacity var(--menu-transition-time);
  -webkit-transition: opacity var(--menu-transition-time);
}

nav svg {
  fill: var(--dark-colour);
}

.logo svg {
  height: var(--logo-height);
  max-height: 60px;
}

@media only screen and (max-width: 968px) {
  .logo svg {
  min-height: 40px;
  }
}

.logo {
  display: inline-block;
  position: relative;
  transition: transform 0.1s;
}

nav .logo {
  grid-area: logo;
}

nav a {
  color: var(--dark-colour);
}

nav #close-menu-icon {
  width: calc(var(--menu-button-size) - 10px);
  grid-area: menu-button;
  justify-content: right;
  margin: auto;
  fill: var(--dark-colour);
  transition: transform, 0.1s;
}

#menu-content {
  font-size: 0.8em;
  grid-area: menu-content;
  /* width: calc(100vw - calc(var(--general-padding) * 2)); */
  justify-items: center;

  margin-top: calc(var(--general-padding)/2);

  display: grid;

  grid-template-columns: 1fr;
  column-gap: var(--general-padding);
  row-gap: var(--general-padding);
}
/* ... */

